[gd_scene load_steps=30 format=3 uid="uid://bwo4tfgnyy6e8"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_c6v5v"]
[ext_resource type="Texture2D" uid="uid://bi7a426gad2ng" path="res://icons/checkerboard.png" id="2_afgk3"]
[ext_resource type="Script" path="res://scripts/image_view.gd" id="3_msis2"]
[ext_resource type="Script" path="res://scripts/title_bar.gd" id="4_hugmt"]
[ext_resource type="Texture2D" uid="uid://cdhwn32urq03v" path="res://icons/filter_on.tres" id="5_ub7h8"]
[ext_resource type="Texture2D" uid="uid://2l7b3gug3lou" path="res://icons/filter_off.tres" id="6_ojh3h"]
[ext_resource type="AudioStream" uid="uid://dvmc322i86juy" path="res://audio/click_on.ogg" id="7_jdfsb"]
[ext_resource type="AudioStream" uid="uid://bmli5kstkfpfl" path="res://audio/click_off.ogg" id="8_5skqw"]
[ext_resource type="Texture2D" uid="uid://d1fge8vg81odj" path="res://icons/minimize.tres" id="9_kwsgi"]
[ext_resource type="Texture2D" uid="uid://cn7ik7q637g24" path="res://icons/minmax.tres" id="10_s8p7l"]
[ext_resource type="Texture2D" uid="uid://cev2idvdy818e" path="res://info.png" id="11_mg2mc"]
[ext_resource type="Texture2D" uid="uid://cnrywnync3bs0" path="res://icons/quit.tres" id="11_t04j1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfbcm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hg48"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ji3j6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtji0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hnqm2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k4c1u"]

[sub_resource type="Gradient" id="Gradient_h5s16"]
offsets = PackedFloat32Array(0, 0.458065, 1)
colors = PackedColorArray(0.669047, 0.220342, 0.100504, 1, 0.442316, 0.141673, 0.0638339, 1, 0.180833, 0.0704261, 0.0522665, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3bsx2"]
gradient = SubResource("Gradient_h5s16")
fill_to = Vector2(1, 0.477064)

[sub_resource type="GDScript" id="GDScript_wb08w"]
script/source = "extends ColorRect


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	if OS.has_feature(\"transparent\")
	
	$Color.color_changed.connect(
		func(new): 
			color = new
			$Color.modulate = Color(new, 1).lightened(0.2)
	)
	$Color.color = Color(randf_range(0, 1), randf_range(0, 1), randf_range(0, 1))
	color = $Color.color
	$Color.modulate = Color($Color.color, 1).lightened(0.2)
"

[sub_resource type="Shader" id="Shader_25a4r"]
code = "shader_type canvas_item;

float sun(vec2 uv, float battery)
{
 	float val = smoothstep(0.3, 0.29, length(uv));
 	float bloom = smoothstep(0.7, 0.0, length(uv));
    float cut = 3.0 * sin((uv.y + TIME * 0.2 * (battery + 0.02)) * 100.0) 
				+ clamp(uv.y * 14.0 + 1.0, -6.0, 6.0);
    cut = clamp(cut, 0.0, 1.0);
    return clamp(val * cut, 0.0, 1.0) + bloom * 0.6;
}

float grid(vec2 uv, float battery)
{
    vec2 size = vec2(uv.y, uv.y * uv.y * 0.2) * 0.01;
    uv += vec2(0.0, TIME * 4.0 * (battery + 0.05));
    uv = abs(fract(uv) - 0.5);
 	vec2 lines = smoothstep(size, vec2(0.0), uv);
 	lines += smoothstep(size * 5.0, vec2(0.0), uv) * 0.4 * battery;
    return clamp(lines.x + lines.y, 0.0, 3.0);
}

float dot2(in vec2 v ) { return dot(v,v); }

float sdTrapezoid( in vec2 p, in float r1, float r2, float he )
{
    vec2 k1 = vec2(r2,he);
    vec2 k2 = vec2(r2-r1,2.0*he);
    p.x = abs(p.x);
    vec2 ca = vec2(p.x-min(p.x,(p.y<0.0)?r1:r2), abs(p.y)-he);
    vec2 cb = p - k1 + k2*clamp( dot(k1-p,k2)/dot2(k2), 0.0, 1.0 );
    float s = (cb.x<0.0 && ca.y<0.0) ? -1.0 : 1.0;
    return s*sqrt( min(dot2(ca),dot2(cb)) );
}

float sdLine( in vec2 p, in vec2 a, in vec2 b )
{
    vec2 pa = p-a, ba = b-a;
    float h = clamp( dot(pa,ba)/dot(ba,ba), 0.0, 1.0 );
    return length( pa - ba*h );
}

float sdBox( in vec2 p, in vec2 b )
{
    vec2 d = abs(p)-b;
    return length(max(d,vec2(0))) + min(max(d.x,d.y),0.0);
}

float opSmoothUnion(float d1, float d2, float k){
	float h = clamp(0.5 + 0.5 * (d2 - d1) /k,0.0,1.0);
    return mix(d2, d1 , h) - k * h * ( 1.0 - h);
}

float sdCloud(in vec2 p, in vec2 a1, in vec2 b1, in vec2 a2, in vec2 b2, float w)
{
	//float lineVal1 = smoothstep(w - 0.0001, w, sdLine(p, a1, b1));
    float lineVal1 = sdLine(p, a1, b1);
    float lineVal2 = sdLine(p, a2, b2);
    vec2 ww = vec2(w*1.5, 0.0);
    vec2 left = max(a1 + ww, a2 + ww);
    vec2 right = min(b1 - ww, b2 - ww);
    vec2 boxCenter = (left + right) * 0.5;
    //float boxW = right.x - left.x;
    float boxH = abs(a2.y - a1.y) * 0.5;
    //float boxVal = sdBox(p - boxCenter, vec2(boxW, boxH)) + w;
    float boxVal = sdBox(p - boxCenter, vec2(0.04, boxH)) + w;
    
    float uniVal1 = opSmoothUnion(lineVal1, boxVal, 0.05);
    float uniVal2 = opSmoothUnion(lineVal2, boxVal, 0.05);
    
    return min(uniVal1, uniVal2);
}

void fragment()
{
    vec2 uv = (2.0 * (FRAGCOORD.xy) - (1.0 / SCREEN_PIXEL_SIZE).xy)/(1.0 / SCREEN_PIXEL_SIZE).y;
	uv = vec2(uv.x, 0.0 - uv.y);
    float battery = 1.0;
    //if (iMouse.x > 1.0 && iMouse.y > 1.0) battery = iMouse.y / (1.0 / SCREEN_PIXEL_SIZE).y;
    //else battery = 0.8;
    
    //if (abs(uv.x) < (9.0 / 16.0))
    {
        // Grid
        float fog = smoothstep(0.1, -0.02, abs(uv.y + 0.2));
        vec3 col = vec3(0.0, 0.1, 0.2);
        if (uv.y < -0.2)
        {
            uv.y = 3.0 / (abs(uv.y + 0.2) + 0.05);
            uv.x *= uv.y * 1.0;
            float gridVal = grid(uv, battery);
            col = mix(col, vec3(1.0, 0.5, 1.0), gridVal);
        }
        else
        {
            float fujiD = min(uv.y * 4.5 - 0.5, 1.0);
            uv.y -= battery * 1.1 - 0.51;
            
            vec2 sunUV = uv;
            vec2 fujiUV = uv;
            
            // Sun
            sunUV += vec2(0.75, 0.2);
            //uv.y -= 1.1 - 0.51;
            col = vec3(1.0, 0.2, 1.0);
            float sunVal = sun(sunUV, battery);
            
            col = mix(col, vec3(1.0, 0.4, 0.1), sunUV.y * 2.0 + 0.2);
            col = mix(vec3(0.0, 0.0, 0.0), col, sunVal);
            
            // fuji
            float fujiVal = sdTrapezoid( uv  + vec2(-0.75+sunUV.y * 0.0, 0.5), 1.75 + pow(uv.y * uv.y, 2.1), 0.2, 0.5);
            float waveVal = uv.y + sin(uv.x * 20.0 + TIME * 2.0) * 0.05 + 0.2;
            float wave_width = smoothstep(0.0,0.01,(waveVal));
            
            // fuji color
            col = mix( col, mix(vec3(0.0, 0.0, 0.25), vec3(1.0, 0.0, 0.5), fujiD), step(fujiVal, 0.0));
            // fuji top snow
            col = mix( col, vec3(1.0, 0.5, 1.0), wave_width * step(fujiVal, 0.0));
            // fuji outline
            col = mix( col, vec3(1.0, 0.5, 1.0), 1.0-smoothstep(0.0,0.01,abs(fujiVal)) );
            //col = mix( col, vec3(1.0, 1.0, 1.0), 1.0-smoothstep(0.03,0.04,abs(fujiVal)) );
            //col = vec3(1.0, 1.0, 1.0) *(1.0-smoothstep(0.03,0.04,abs(fujiVal)));
            
            // horizon color
            col += mix( col, mix(vec3(1.0, 0.12, 0.8), vec3(0.0, 0.0, 0.2), clamp(uv.y * 3.5 + 3.0, 0.0, 1.0)), step(0.0, fujiVal) );
            
            // cloud
            vec2 cloudUV = uv;
            cloudUV.x = mod(cloudUV.x + TIME * 0.1, 4.0) - 2.0;
            float cloudTime = TIME * 0.5;
            float cloudY = -0.5;
            float cloudVal1 = sdCloud(cloudUV, 
                                     vec2(0.1 + sin(cloudTime + 140.5)*0.1,cloudY), 
                                     vec2(1.05 + cos(cloudTime * 0.9 - 36.56) * 0.1, cloudY), 
                                     vec2(0.2 + cos(cloudTime * 0.867 + 387.165) * 0.1,0.25+cloudY), 
                                     vec2(0.5 + cos(cloudTime * 0.9675 - 15.162) * 0.09, 0.25+cloudY), 0.075);
            cloudY = -0.6;
            float cloudVal2 = sdCloud(cloudUV, 
                                     vec2(-0.9 + cos(cloudTime * 1.02 + 541.75) * 0.1,cloudY), 
                                     vec2(-0.5 + sin(cloudTime * 0.9 - 316.56) * 0.1, cloudY), 
                                     vec2(-1.5 + cos(cloudTime * 0.867 + 37.165) * 0.1,0.25+cloudY), 
                                     vec2(-0.6 + sin(cloudTime * 0.9675 + 665.162) * 0.09, 0.25+cloudY), 0.075);
            
            float cloudVal = min(cloudVal1, cloudVal2);
            
            //col = mix(col, vec3(1.0,1.0,0.0), smoothstep(0.0751, 0.075, cloudVal));
            col = mix(col, vec3(0.0, 0.0, 0.2), 1.0 - smoothstep(0.075 - 0.0001, 0.075, cloudVal));
            col += vec3(1.0, 1.0, 1.0)*(1.0 - smoothstep(0.0,0.01,abs(cloudVal - 0.075)));
        }

        col += fog * fog * fog;
        col = mix(vec3(col.r, col.r, col.r) * 0.5, col, battery * 0.7);

        COLOR = vec4(col,1.0);
    }
    //else fragColor = vec4(0.0);

    
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ybwry"]
shader = SubResource("Shader_25a4r")

[sub_resource type="Shader" id="Shader_x2x8v"]
code = "// Inspired by: https://www.shadertoy.com/view/tsXBzS
shader_type canvas_item;
render_mode unshaded;

#define T t()

uniform float timeScaleFactor = 1.;
uniform float scale = 1.;
uniform float edge0 = .0;
uniform float edge1 = 1.;
uniform vec3 color1 : source_color = vec3(.2, .7, .9);
uniform vec3 color2 : source_color = vec3(1., 0., 1.);

vec2 rotate(vec2 p, float a) {
	float c = cos(a);
	float s = sin(a);
	return  p * mat2(vec2(c, s), vec2(-s, c));	
}

float t() {
	return TIME * timeScaleFactor;
}

vec3 palette(float d) {
	return mix(color1, color2, d);
}

float map(vec3 p) {
	for(int i = 0; i < 8; ++i) {
        float t = T * 0.2;
        p.xz =rotate(p.xz, t);
        p.xy =rotate(p.xy, t * 1.89);
        p.xz = abs(p.xz);
        p.xz-=.5;
	}
	return dot(sign(p), p) / 5.;
}

vec4 rm (vec3 ro, vec3 rd) {
    float t = 0.;
    vec3 col = vec3(0.);
    float d;
    for(float i = 0.; i < 64.; i++){
		vec3 p = ro + rd * t;
        d = map(p) * .5;
        if(d < .02) {
            break;
        }
        if(d > 100.) {
        	break;
        }
        col+= palette(length(p) * .1) / (400. * d);
        t += d;
    }
    return vec4(col, 1. / (d * 100.));
}

void fragment() {
	vec2 uv = vec2(UV.x, 1. - UV.y);
	uv -= .5;
	uv /= scale;

	vec3 ro = vec3(.0, .0, -50.);
	ro.xz = rotate(ro.xz, T);
	vec3 cf = normalize(-ro);
	vec3 cs = normalize(cross(cf, vec3(0., 1., 0.)));
	vec3 cu = normalize(cross(cf, cs));
	vec3 uuv = ro + cf * 3. + uv.x * cs + uv.y * cu;
	
	vec3 rd = normalize(uuv - ro);
	vec4 col = rm(ro, rd);
	float y = .2126 * col.r + .7152 * col.g + .0722 * col.b;
	
	COLOR = vec4(col.rgb, 1);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lweg4"]
shader = SubResource("Shader_x2x8v")
shader_parameter/timeScaleFactor = 0.375
shader_parameter/scale = 1.65
shader_parameter/edge0 = 0.0
shader_parameter/edge1 = 1.0
shader_parameter/color1 = Color(0.984314, 0.894118, 0.490196, 1)
shader_parameter/color2 = Color(0.894118, 0.396078, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndjx1"]
bg_color = Color(0, 0, 0, 0.219608)
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 8.0

[sub_resource type="GDScript" id="GDScript_std44"]
script/source = "extends CheckButton

@export var texture_on: Texture2D
@export var texture_off: Texture2D

func _on_toggled(toggle: bool) -> void:
	if toggle:
		$ClickOn.play()
		icon = texture_on
	else:
		$ClickOff.play()
		icon = texture_off
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q6wh3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ieygm"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_c6v5v")

[node name="Background" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_tfbcm")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_4hg48")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_ji3j6")
theme_override_styles/tab_disabled = SubResource("StyleBoxEmpty_qtji0")
theme_override_styles/panel = SubResource("StyleBoxEmpty_hnqm2")
theme_override_styles/tabbar_background = SubResource("StyleBoxEmpty_k4c1u")
clip_tabs = false
tabs_visible = false

[node name="Classic" type="TextureRect" parent="Background"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_3bsx2")

[node name="Whiten\'t" type="ColorRect" parent="Background"]
visible = false
layout_mode = 2
color = Color(0.823529, 0.823529, 0.823529, 1)

[node name="Blackn\'t" type="ColorRect" parent="Background"]
visible = false
layout_mode = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="Checkerboard" type="TextureRect" parent="Background"]
visible = false
layout_mode = 2
texture = ExtResource("2_afgk3")
stretch_mode = 1

[node name="Coloured" type="ColorRect" parent="Background"]
visible = false
layout_mode = 2
script = SubResource("GDScript_wb08w")

[node name="Color" type="ColorPickerButton" parent="Background/Coloured"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 42.0
grow_vertical = 0
focus_mode = 0
icon_alignment = 1
expand_icon = true
color = Color(0.74902, 0.34902, 0.0784314, 1)

[node name="NeonScape" type="ColorRect" parent="Background"]
visible = false
material = SubResource("ShaderMaterial_ybwry")
layout_mode = 2
mouse_filter = 2
color = Color(0.721569, 0.415686, 0.211765, 1)

[node name="Orbulot" type="ColorRect" parent="Background"]
visible = false
material = SubResource("ShaderMaterial_lweg4")
layout_mode = 2
mouse_filter = 2
color = Color(0.721569, 0.415686, 0.211765, 1)

[node name="PrimaryWindow" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ImageView" type="TextureRect" parent="PrimaryWindow"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 250)
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
script = ExtResource("3_msis2")

[node name="Titlebar" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 46.0
grow_horizontal = 2
mouse_filter = 1
script = ExtResource("4_hugmt")

[node name="Panel" type="Panel" parent="Titlebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ndjx1")

[node name="Control" type="Control" parent="Titlebar"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Titlebar/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleLabel" type="RichTextLabel" parent="Titlebar/Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[color=white][outline_color=black][outline_size=4][font_size=24]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="Titlebar/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 2

[node name="BackgroundOptions" type="OptionButton" parent="Titlebar/Control/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
fit_to_longest_item = false

[node name="ScaleOptions" type="OptionButton" parent="Titlebar/Control/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
fit_to_longest_item = false

[node name="FilterToggle" type="CheckButton" parent="Titlebar/Control/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
focus_mode = 0
button_pressed = true
action_mode = 0
icon = ExtResource("5_ub7h8")
icon_alignment = 2
script = SubResource("GDScript_std44")
texture_on = ExtResource("5_ub7h8")
texture_off = ExtResource("6_ojh3h")

[node name="ClickOn" type="AudioStreamPlayer" parent="Titlebar/Control/HBoxContainer/HBoxContainer/FilterToggle"]
stream = ExtResource("7_jdfsb")
volume_db = 7.0

[node name="ClickOff" type="AudioStreamPlayer" parent="Titlebar/Control/HBoxContainer/HBoxContainer/FilterToggle"]
stream = ExtResource("8_5skqw")
volume_db = 7.0

[node name="VSeparator" type="VSeparator" parent="Titlebar/Control/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_q6wh3")

[node name="HideButton" type="Button" parent="Titlebar/Control/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_ieygm")
icon = ExtResource("9_kwsgi")
icon_alignment = 1
expand_icon = true

[node name="MinMaxButton" type="Button" parent="Titlebar/Control/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_ieygm")
icon = ExtResource("10_s8p7l")
expand_icon = true

[node name="QuitButton" type="Button" parent="Titlebar/Control/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_ieygm")
icon = ExtResource("11_t04j1")
expand_icon = true

[node name="Borders" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BL" type="Control" parent="Borders"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 8.0
offset_right = 6.0
offset_bottom = -8.0
grow_vertical = 2
mouse_default_cursor_shape = 10

[node name="BT" type="Control" parent="Borders"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_right = -8.0
offset_bottom = 6.0
grow_horizontal = 2
mouse_default_cursor_shape = 9

[node name="BR" type="Control" parent="Borders"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10

[node name="BB" type="Control" parent="Borders"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -6.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 9

[node name="CBL" type="Control" parent="Borders"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
mouse_default_cursor_shape = 11

[node name="CBR" type="Control" parent="Borders"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12

[node name="CTR" type="Control" parent="Borders"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
mouse_default_cursor_shape = 11

[node name="CTL" type="Control" parent="Borders"]
layout_mode = 1
anchors_preset = 0
offset_right = 8.0
offset_bottom = 8.0
mouse_default_cursor_shape = 12

[node name="MetaButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00725001
anchor_top = 0.046
anchor_right = 0.05475
anchor_bottom = 0.122
offset_left = 0.199989
offset_right = 0.199982
offset_bottom = -3.05176e-05
icon = ExtResource("11_mg2mc")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[connection signal="item_rect_changed" from="PrimaryWindow/ImageView" to="PrimaryWindow/ImageView" method="_on_item_rect_changed"]
[connection signal="toggled" from="Titlebar/Control/HBoxContainer/HBoxContainer/FilterToggle" to="Titlebar/Control/HBoxContainer/HBoxContainer/FilterToggle" method="_on_toggled"]
